added redeem and user profile page

--- a/UserApp/app/src/main/res/layout/fragment_gallery.xml
+++ b/UserApp/app/src/main/res/layout/fragment_gallery.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_user"
+    android:padding="30dp">
 
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="match_parent"
+        android:layout_height="186dp"
+        app:srcCompat="@drawable/myntra_coupon"
+        tools:layout_editor_absoluteX="102dp"
+        tools:layout_editor_absoluteY="290dp"
+        android:layout_marginTop="20dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="match_parent"
+        android:layout_height="186dp"
+        app:srcCompat="@drawable/swiggy_coupon"
+        tools:layout_editor_absoluteX="112dp"
+        tools:layout_editor_absoluteY="38dp"
+        android:layout_marginTop="250dp" />
+</RelativeLayout>
