--- a/UserApp/app/src/main/res/layout/fragment_home.xml
+++ b/UserApp/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="212dp" />
+        android:text="Submit"
+        android:textAlignment="center"
+        tools:layout_editor_absoluteX="176dp"
+        tools:layout_editor_absoluteY="455dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
